syntax = "proto3";
package tsuki.staking;

import "staking.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/TsukiCore/cosmos-sdk/x/staking/types";

// Query defines the gRPC querier service
service Query {
  // Validators queries a validator by address.
  rpc ValidatorByAddress (ValidatorByAddressRequest) returns (ValidatorByAddressResponse) {}
}

message ValidatorByAddressRequest {
  bytes val_addr = 1 [
    (gogoproto.casttype) = "github.com/TsukiCore/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"val_addr\""
  ];
}

message ValidatorByAddressResponse {
  tsuki.staking.Validator validator = 1 [(gogoproto.nullable) = false];
}
